Updated resume to be update to date. Also fixed an issue in which images in Projects were overflowing the flex box by adding a img-care class and setting image width appropriately so that it would adjust size responsively

--- a/css/style.css
+++ b/css/style.css
@@ -112,6 +112,11 @@ a {
   color: #64daff;
 }
 
+.img-care {
+  overflow: hidden;
+  width: 100%;
+}
+
 .white-text {
   font-weight: bold;
   color: #fff;
